--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.0",
+    "express": "^4.18.1",
     "mongodb": "^4.5.0",
     "node-cron": "^3.0.0",
     "telegraf": "^4.8.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
     "@types/node-cron": "^3.0.1",
     "concurrently": "^7.1.0",
