--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mongodb": "^4.5.0",
@@ -22,6 +23,7 @@
     "telegraf": "^4.8.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
     "@types/node-cron": "^3.0.1",
